--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
-  "author": "Mayank",
+  "author": "bharath",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
